Login Auth Added

--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-email-service></app-email-service>
-<app-footer></app-footer>
+<!-- <app-email-service></app-email-service> -->
+<!-- <app-profile></app-profile> -->
+<!-- <app-footer></app-footer> -->
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
