--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -2,4 +2,9 @@
 <!-- <app-profile></app-profile> -->
 <!-- <app-footer></app-footer> -->
 <!-- <app-login></app-login> -->
-<router-outlet></router-outlet>
+<!-- <app-header></app-header> -->
+<!-- <app-footer></app-footer> -->
+<app-base></app-base>
+<!-- <router-outlet></router-outlet> -->
+
+
