--- a/Angular-Components/UpSkillUi/src/app/components/footer/footer.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/footer/footer.component.html
@@ -1,45 +1,15 @@
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="footer-col">
-                <h4>company</h4>
-                <ul>
-                    <li><a href="#">upskills business</a></li>
-                    <li><a href="#">teach with us</a></li>
-                    <li><a href="#">get the app</a></li>
-                    <li><a href="#">About us</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>get help</h4>
-                <ul>
-                    <li><a href="#">careers</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">help & support</a></li>
-                    <li><a href="#">Affiliate</a></li>
-                    <li><a href="#">investors</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>terms and condition</h4>
-                <ul>
-                    <li><a href="#">terms</a></li>
-                    <li><a href="#">Privacy policy</a></li>
-                    <li><a href="#">Cookie setting</a></li>
-                    <li><a href="#">Sitemap</a></li>
-                    <li><a href="#">accessibility statement</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>follow us</h4>
-                <div class="social-links">
-                    <a href="https://www.facebook.com/udemy/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.twitter.com/udemy/"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/udemy/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/udemy"><i class="fa-brands fa-linkedin"></i></a>
-                </div>
-                <a href="https://udemy.com/"><img src="./assets/images/index.png" alt=""></a>
-            </div>
-        </div>
-    </div>
-</footer>
+<div class="footer-basic">
+    <footer>
+        <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">Home</a></li>
+            <li class="list-inline-item"><a href="#">Services</a></li>
+            <li class="list-inline-item"><a href="#">About</a></li>
+            <li class="list-inline-item"><a href="#">Terms</a></li>
+            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        </ul>
+        <p class="copyright">Company Name © 2018</p>
+    </footer>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
