--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -5,18 +5,8 @@
 <!-- <app-header></app-header> -->
 <!-- <app-footer></app-footer> -->
 <app-base></app-base>
+<!-- <app-all-categories></app-all-categories> -->
+
 <!-- <router-outlet></router-outlet> -->
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> f78944666d894652b3390a0b9c9c5337a691ec33
-=======
->>>>>>> f78944666d894652b3390a0b9c9c5337a691ec33
-=======
->>>>>>> f78944666d894652b3390a0b9c9c5337a691ec33
-=======
->>>>>>> f78944666d894652b3390a0b9c9c5337a691ec33
