--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -15,7 +15,6 @@
     </ul>
 </div>
 <div class="main">
-    <div class="title">title</div>
-    <div class="map">map</div>
+    <div class="title"></div>
+    <div class="map"></div>
 </div>
-    
