--- a/Angular-Components/UpSkillUi/src/app/components/footer/footer.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/footer/footer.component.css
@@ -1,12 +1,12 @@
 .footer-basic {
-	padding:40px 0;
+	padding-top: 40px;
 	background-color:#ffffff;
 	color:#4b4c4d;
 	position:fixed;
 	bottom: 0px;
     left: 0px;
     right: 0px;
-	
+	margin-bottom: 10px;
   }
   
   .footer-basic ul {
