--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.css
@@ -17,12 +17,12 @@ body, html {
     position: absolute;
     height: 100vh;
     transform: translate(0px, 0px);
-    width:  100vw;
+    width:  12vw;
     transition: 0.35s;
 }
 
 .main.open {
-    width: calc(100vw - 250px);
+    width: calc(0vw);
     transform: translate(250px, 0px);
     transition: 0.7s;
 }
