--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -4,9 +4,9 @@
 <!-- <app-login></app-login> -->
 <!-- <app-header></app-header> -->
 <!-- <app-footer></app-footer> -->
-<app-base></app-base>
+<!-- <app-base></app-base> -->
 <!-- <app-all-categories></app-all-categories> -->
-
+<app-home></app-home>
 <!-- <router-outlet></router-outlet> -->
 
 
