add-video component added and changes to home component

--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="profile">Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="add-video">Add-Video</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
@@ -31,6 +34,11 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+
+      <!-- ngIf here when the user is logged in -->
+      <button class="btn btn-outline-primary" style="margin: auto;">
+        <a class="nav-link" href="login">Login</a>
+      </button>
     </div>
   </div>
 </nav>
