--- a/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
-<div class="col-md-8" >
+<div class="row">
+<div class="col-md-2"></div>
+<div class="col-md-10" >
 <router-outlet></router-outlet>
+</div>
 </div>
 <app-footer></app-footer>
