--- a/Angular-Components/UpSkillUi/src/app/components/login/login.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/login/login.component.css
@@ -29,7 +29,7 @@ html{
     transform: translate(-50%, -50%);
     width: 300px;
     min-height: 200px;
-    background: #000000;
+    background: #2a2828;
     border-radius: 10px;
     padding: 40px;
     box-sizing: border-box;
