--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="" style="height: auto; width: 50px;"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -36,8 +36,11 @@
       </form>
 
       <!-- ngIf here when the user is logged in -->
-      <button class="btn btn-outline-primary" style="margin: auto;">
+      <button *ngIf="logInFlag" class="btn btn-outline-primary" style="margin-left: auto;">
         <a class="nav-link" href="login">Login</a>
+      </button>
+      <button *ngIf="logInFlag" class="btn btn-outline-success" style="margin: 1%;">
+        <a class="nav-link" href="SignUp">SignUp</a>
       </button>
     </div>
   </div>
