--- a/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
@@ -1,8 +1,14 @@
 <app-header></app-header>
-<div class="row">
-<div class="col-md-2"></div>
-<div class="col-md-10" >
+<div class="row container">
+    <div class=" col col-md-1"></div>
+
+<div class="col col-md-11" >
 <router-outlet></router-outlet>
 </div>
+
+
 </div>
+
+
 <app-footer></app-footer>
+
