--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -40,7 +40,7 @@
         <a class="nav-link" href="login">Login</a>
       </button>
       <button *ngIf="logInFlag" class="btn btn-outline-success" style="margin: 1%;">
-        <a class="nav-link" href="SignUp">SignUp</a>
+        <a class="nav-link" href="sign-up">SignUp</a>
       </button>
       <button *ngIf="!logInFlag" class="btn btn-outline-success" style="margin: 1%;" (click)="logout()">
         <a class="nav-link" href="LogOut">LogOut</a>
