--- a/Angular-Components/UpSkillUi/src/app/components/add-video/add-video.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/add-video/add-video.component.html
@@ -2,29 +2,31 @@
 
 <!-- add validation here -->
 <!-- courseId should be dropdown of mentor's previous courses -->
-<form #f1="ngForm" action="" class="form">
+<div class="container" style="border:solid 1px">
+<div class="column">
+<form #f1="ngForm" action="" class="form-group">
     <div class="form-group">
         <!-- two way binding here man -->
         <label for="courseId">CourseId</label>
-        <input #courseId="ngModel" name="courseId" [(ngModel)]="video.courseId"/>
+        <input #courseId="ngModel" class="form-control" name="courseId" [(ngModel)]="video.courseId"/>
     </div>
 
     <div class="form-group">
         <!-- two way binding here man -->
         <label for="url">Link of the Video</label>
-        <input #courseId="ngModel" name="url" [(ngModel)]="video.url"/>
+        <input #courseId="ngModel" class="form-control" name="url" [(ngModel)]="video.url"/>
     </div>
 
     <div class="form-group">
         <!-- two way binding here man -->
         <label for="duration">Duration of the Course(hrs)</label>
-        <input #courseId="ngModel" name="duration" [(ngModel)]="video.duration"/>
+        <input #courseId="ngModel" class="form-control" name="duration" [(ngModel)]="video.duration"/>
     </div>
 
     <div class="form-group">
         <!-- two way binding here man -->
         <label for="title">Title</label>
-        <input #courseId="ngModel" name="title" [(ngModel)]="video.title"/>
+        <input #courseId="ngModel" class="form-control" name="title" [(ngModel)]="video.title"/>
     </div>
 
     <div>
@@ -32,3 +34,6 @@
     </div>
 
 </form>
+
+</div>
+</div>
