--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -7,6 +7,7 @@
 <!-- <app-base></app-base> -->
 <!-- <app-all-categories></app-all-categories> -->
 <app-home></app-home>
+<!-- <app-slider2></app-slider2> -->
 <!-- <router-outlet></router-outlet> -->
 
 
