--- a/Angular-Components/UpSkillUi/src/app/course-page/course-page.component.html
+++ b/Angular-Components/UpSkillUi/src/app/course-page/course-page.component.html
@@ -1,15 +1,16 @@
 <div class="row">
     <div class="col-md-8">
         <div class="video">
-            <iframe width="720" height="415" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            <iframe width="720" height="415" [attr.src]="present_video" id="video">
             </iframe>
         </div>
     </div>
     <div class="col-md-4">
-        <ol class="list-group list-group-numbered" *ngFor="let v of videolinks">
-            <li class="list-group-item">{{v.title}}</li>
-            <li class="list-group-item">hjgkhj</li>
-          </ol>
+        <ol class="list-group">
+        <div *ngFor="let v of videolinks">
+            <button (click)="showVideo(v)" ><li class="list-group-item">{{v.title}}</li></button>
+        </div>
+    </ol>
     </div>
 </div>
 
