--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -20,4 +20,6 @@
   </button>
 </div>
 <app-slider2></app-slider2>
+
+<app-all-categories></app-all-categories>
 <app-email-service></app-email-service>
