--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.css
@@ -1,178 +1,137 @@
-.product{
-    padding: 20px 0;
-}
-.slider-wrap{
-    position: relative;
-    overflow: hidden;
-    height: 350px;
-}
-.slider-main{
-    position: absolute;
-    width: 200%;
-}
-.item{
-    display: inline-block;
-    width: 250px;
-    height: 250px;
-    position: relative;
-    margin: 0 12px;
-}
-.text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+/* CARD CSS */
+.product {
+  padding: 20px 0;
 }
 
+.slider-wrap {
+  position: relative;
+  overflow: hidden;
+  height: 350px;
+}
 
+.slider-main {
+  position: absolute;
+  width: 200%;
+}
+
+.item {
+  display: inline-block;
+  width: 250px;
+  height: 250px;
+  position: relative;
+  margin: 0 12px;
+}
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 .title-hyperlink {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  font-weight: bolder;
+  color: black;
 }
 
 body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #efefef;
-}
-
-.slide-container {
-    margin: 0 30px;
-    overflow: hidden;
-    border: 1px solid black;
-    padding: 30px;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #efefef;
 }
 
 .card {
-    height: 250px;
-    margin: 10px;
-    /* transition: 2s; */
-    /* background-color: powderblue; */
+  height: 250px;
+  margin: 10px;
 }
 
-.full-course {
-    height: 40px;
-    font-weight: bolder;
-    padding: 10px;
-}
 .image-box {
-    height: 150px;
-    border: 1px solid black;
-    width: 230px;
-    background-color: white;
-    margin: auto;
-    /* margin-top: 7px; */
+  height: 150px;
+  border: 1px solid black;
+  width: 230px;
+  background-color: white;
+  margin: auto;
 }
-
 
 .card .image-box img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .card .profile-details {
-    display: flex;
-    align-items: center;
-    column-gap: 12px;
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
 }
 
 .card img {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
-.profile-details{
+.profile-details {
   background-color: white;
   height: 70px;
   width: 200px;
 }
 
 .profile-details .name {
-    font-size: 12px;
-    font-weight: lighter;
+  font-size: 12px;
+  font-weight: lighter;
 }
 
-.profile-details .job {
-    font-size: 12px;
-    font-weight: 500;
-    color: #4d4d4d;
+.profile-details {
+  font-size: 12px;
+  font-weight: 500;
+  color: #4d4d4d;
 }
 
-.checked {
-    color: orange;
+.prev {
+  position: absolute;
+  left: 40px;
+  top: 40%;
+  transform: translate(-50%, -50%);
 }
 
-.swiper-navBtn {
-    color: #000;
-    height: 40px;
-    width: 40px;
-    background: #fff;
-    border-radius: 50%;
+.next {
+  position: absolute;
+  right: -30px;
+  top: 40%;
+  transform: translate(-50%, -50%);
 }
 
-.swiper-navBtn::before,
-.swiper-navBtn::after {
-    font-size: 18px;
+.btn {
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  border: 1px solid black;
+  background-color: transparent;
+  /* font-weight: bold; */
+  font-size: xx-large;
+  color: black;
 }
 
-
-@media screen and (max-width: 768px) {
-    .swiper-navBtn {
-        display: none;
-    }
+.btn:hover{
+  background-color: #b7b6b6;
 }
 
-/* EXTRA */
-.swiper-navBtn {
-    color: #000;
-    height: 40px;
-    width: 40px;
-    background: #fff;
-    border-radius: 50%;
-  }
-  .swiper-navBtn::before,
-  .swiper-navBtn::after {
-    font-size: 18px;
-  }
-
-  /* BUTTON css */
-  .prev{
-    position: absolute;
-    left: 40px;
-    top: 40%;
-    transform: translate(-50%,-50%);
-  }
-  .next{
-    position: absolute;
-    right: -30px;
-    top: 40%;
-    transform: translate(-50%,-50%);
-  }
-  .btn{
-    height: 60px;
-    width: 60px;
-    border-radius: 100%;
-    border: 1px solid black;
-    background-color: transparent;
-    font-weight: bolder;
-    font-size: xx-large;
-  }
-
-  
 .name-job {
-  padding: 20px;
+  margin: 15px;
   text-align: left;
 }
+
+@media screen and (max-width: 768px) {
+  .swiper-navBtn {
+    display: none;
+  }
+}
+/* ************************************************************************* */
+
+
+/* BUTTON css */
 
 .course-details {
   width: 380px;
@@ -182,7 +141,7 @@ body {
   float: right;
 }
 
-.best-seller {
+.rating {
   background-color: rgb(234, 234, 136);
   padding: 5px;
   border-radius: 5px;
@@ -194,8 +153,8 @@ body {
   font-size: larger;
 }
 
-.updated-time {
-  font-size: 12px;
+.price {
+  font-size: 20px;
 }
 
 p>b {
@@ -213,16 +172,15 @@ p>b {
 }
 
 .course-image {
-  height: 200px;
-  width: 22vw;
+  height: 215px;
+  width: 320px;
   margin: auto;
-  margin-top: 20px;
 }
 
 .image-container {
   height: 300px;
-  width: 24vw;
-  margin-top: 20px;
+  width: 27vw;
+  margin-top: 15px;
   margin-left: 15px;
   float: left;
   display: flex;
@@ -230,29 +188,27 @@ p>b {
 }
 
 .btn-container {
-  margin-top: 20px;
-}
-
-.more-detail {
-  background-color: rgb(243, 243, 53);
-  color: black;
+  margin: 20px;
 }
 
 .modal-content {
-  border: 2px solid black;
+  border: 1px solid black;
   width: 59vw;
-  border-radius: 20px;
+  border-radius: 15px;
+  right: 120px;
+  bottom: 50px;
 }
-.modal-dialog{
-  margin-top: 100px;
-  margin-left: 312px;
-  
+
+.modal-dialog {
+  top: 130px;
+  margin: auto;
 }
-.close-btn{
-  position: relative;
+
+.close-btn {
+  position: absolute;
   top: 3px;
-  left: 700px;
-  background-color: red;
+  left: 730px;
+  background-color: transparent;
   color: black;
   border: 1px solid white;
   border-radius: 200%;
@@ -261,10 +217,8 @@ p>b {
   font-size: 20px;
   padding-right: 20px;
 }
-.more-detail {
-  background-color: rgb(243, 243, 53);
-  color: black;
-}
+
+
 button {
   width: 200px;
   height: 50px;
@@ -272,11 +226,41 @@ button {
   font-weight: bolder;
   color: white;
 }
-.btns{
-  width: 128px;
-  margin: 10px;
+
+.btns {
+  width: 140px;
+  margin: 4px;
   border-radius: 15px;
 }
-.cart-button{
-  background-color: rgb(0, 102, 255);
+
+.cart-button {
+  background-color: transparent;
+  color: black;
+  border: 2px solid rgb(0, 179, 255);
+}
+
+.cart-button:hover{
+  color: #fff;
+  background-color: rgb(0, 179, 255);;
+}
+
+.more-detail {
+  background-color: transparent;
+  color: black;
+  border: 2px solid green;
+}
+
+.more-detail:hover{
+  color: #fff;
+  background-color: green;
+}
+
+.rating-star{
+  width: 20px;
+  height: 20px;
+  margin: 1px;
+  margin-bottom: 3px;
+}
+.rating-div{
+  display: inline-block;
 }
