--- a/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/header/header.component.html
@@ -15,6 +15,10 @@
         <li class="nav-item">
           <a class="nav-link" href="add-video">Add-Video</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="add-course">Add-Course</a>
+        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
