some changes to login component

--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -8,7 +8,8 @@
 <!-- <app-all-categories></app-all-categories> -->
 <!-- <app-home></app-home> -->
 <!-- <app-slider2></app-slider2> -->
-<!-- <router-outlet></router-outlet> -->
-<app-course-page></app-course-page>
+<router-outlet></router-outlet>
+<!-- <app-course-page></app-course-page> -->
+<!-- <app-features></app-features> -->
 
 
