--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -1,3 +1,5 @@
+<!-- <app-header></app-header> -->
+
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
