--- a/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 <!-- <div class="row container">
     <div class=" col col-md-1"></div> -->
 
@@ -10,5 +10,5 @@
 <!-- </div> -->
 
 
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
 
