--- a/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
@@ -38,7 +38,7 @@
                 <!-- <h3>Sign in here</h3> -->
                 <div class="inputBox"></div>
                 <p class="" error-message></p>
-                <div>Username:<input formControlName="userName" name="userName" type="text" class="username" value="dhruvfromhtml" /></div>
+                <div><input formControlName="userName" hidden name="userName" type="text" class="username"  /></div>
                 <div>Email:<input formControlName="email" name="email" type="text" class="email" /></div>
                 <div>Password:<input formControlName="password" name="password" type="text" class="password" /></div>
                 <!-- <div>Role:<input formControlName="roleId" name="roleId" type="text" class="roleId" /></div> -->
