--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.css
@@ -22,13 +22,6 @@
   margin: 0 12px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
 .title-hyperlink {
   text-decoration: none;
   font-weight: bolder;
@@ -76,17 +69,21 @@ body {
   background-color: white;
   height: 70px;
   width: 200px;
-}
-
-.profile-details .name {
-  font-size: 12px;
-  font-weight: lighter;
-}
-
-.profile-details {
   font-size: 12px;
   font-weight: 500;
   color: #4d4d4d;
+}
+
+.name {
+  font-size: 12px;
+  font-weight: lighter;
+  margin: 0;
+}
+
+.pricex{
+  font-size: 20px;
+  margin: 0;
+  color: green;
 }
 
 .prev {
@@ -103,23 +100,22 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.btn {
+.btnx {
   height: 50px;
   width: 50px;
   border-radius: 100%;
   border: 1px solid black;
   background-color: transparent;
-  /* font-weight: bold; */
   font-size: xx-large;
   color: black;
 }
 
-.btn:hover{
+.btnx:hover{
   background-color: #b7b6b6;
 }
 
 .name-job {
-  margin: 15px;
+  padding: 10px;
   text-align: left;
 }
 
@@ -128,23 +124,19 @@ body {
     display: none;
   }
 }
+
 /* ************************************************************************* */
 
-
-/* BUTTON css */
-
 .course-details {
-  width: 380px;
-  padding: 10px;
-  border-radius: 10px;
   background-color: #fff;
+  width: 380px;
   float: right;
 }
 
 .rating {
   background-color: rgb(234, 234, 136);
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 5px;  
 }
 
 .title-hyperlink {
@@ -155,82 +147,55 @@ body {
 
 .price {
   font-size: 20px;
+  
 }
 
-p>b {
+.price > b {
   color: green;
   font-size: 15px;
 }
 
-.extra-details {
-  margin: 5px;
-}
-
 .course-duration {
-  font-size: 12px;
+  font-size: 15px;
   font-weight: lighter;
 }
 
 .course-image {
-  height: 215px;
-  width: 320px;
+  width: 250px;
+  height: 220px;
   margin: auto;
 }
 
 .image-container {
-  height: 300px;
-  width: 27vw;
-  margin-top: 15px;
-  margin-left: 15px;
   float: left;
   display: flex;
   flex-direction: column;
+  width: 22vw;
 }
 
 .btn-container {
-  margin: 20px;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.modal-dialog{
+  margin-right: 550px;
 }
 
 .modal-content {
-  border: 1px solid black;
-  width: 59vw;
-  border-radius: 15px;
-  right: 120px;
-  bottom: 50px;
-}
-
-.modal-dialog {
-  top: 130px;
-  margin: auto;
-}
-
-.close-btn {
-  position: absolute;
-  top: 3px;
-  left: 730px;
-  background-color: transparent;
-  color: black;
-  border: 1px solid white;
-  border-radius: 200%;
-  width: 20px;
-  height: 20px;
-  font-size: 20px;
-  padding-right: 20px;
-}
-
-
-button {
-  width: 200px;
-  height: 50px;
-  border: 1px solid black;
-  font-weight: bolder;
-  color: white;
+  width: 52vw;
+  margin-right: 200px;
 }
 
 .btns {
   width: 140px;
   margin: 4px;
+  height: 40px;
   border-radius: 15px;
+}
+
+.bts{
+  display: inline;
 }
 
 .cart-button {
@@ -255,12 +220,10 @@ button {
   background-color: green;
 }
 
-.rating-star{
-  width: 20px;
+.rating-star {
   height: 20px;
-  margin: 1px;
-  margin-bottom: 3px;
 }
-.rating-div{
+
+.rating-div {
   display: inline-block;
 }
