--- a/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.css
@@ -1,5 +1,5 @@
 .video{
-    /* margin-top: rem; */
+    margin :5.5rem;
     /* margin-left: auto;
     margin-right: auto ; */
 }
@@ -14,9 +14,18 @@ padding: 3rem;
 .list-group{
     max-height: 30rem;
     margin-bottom: 10px;
-    overflow:scroll;
+    /* overflow:scroll; */
     -webkit-overflow-scrolling: touch;
 }
 .row{
     background-color: #EEEEEE;
+    margin-bottom: 0;
+}
+.text{
+    z-index: +1;
+    position: absolute;
+}
+.textnew{
+    z-index: -1;
+    position: absolute;
 }
