--- a/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.html
@@ -1,5 +1,8 @@
 <div class="row">
     <div class="col-md-8">
+        <div [ngClass]="textclass">
+            <h2>start your learning journey</h2>
+        </div>
         <div class="video">
             <iframe width="720" height="415" [attr.src]="present_video" id="video">
             </iframe>
@@ -8,7 +11,7 @@
     <div class="col-md-4">
         <ol class="list-group">
         <div *ngFor="let v of videolinks">
-            <button (click)="showVideo(v)" ><li class="list-group-item">{{v.title}}</li></button>
+            <a (click)="showVideo(v)" style="cursor: pointer;"><li class="list-group-item">{{v.title}}</li></a>
         </div>
     </ol>
     </div>
