--- a/Angular-Components/UpSkillUi/src/app/components/sign-up/sign-up.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/sign-up/sign-up.component.css
@@ -1,4 +1,14 @@
+.container-main{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    /* background-color: #00ADB5;   */
+    background-image: url('./gradient1.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
+}
 .login-container {
     /* background-image: url('./assets/bar-chart-white.svg'); */
     background-color: #00ffff;
@@ -29,6 +39,7 @@
     background: #000000;
     border-radius: 10px;
     padding: 40px;
+    padding-bottom: 1rem;
     box-sizing: border-box;
     /* box-shadow: 2px 2px 50px black; */
 }
@@ -48,7 +59,7 @@ h3 {
 
 .loginBox input {
     width: 100%;
-    margin-bottom: 20px
+    margin-bottom: 15px
 }
 
 .loginBox input[type="text"],
@@ -56,7 +67,7 @@ h3 {
     border: none;
     border-bottom: 2px solid #262626;
     outline: none;
-    height: 40px;
+    height: 30px;
     color: #fff;
     background: transparent;
     font-size: 16px;
@@ -126,4 +137,8 @@ p {
 }
 .btn{
     width: 5rem;
+}
+img{
+    width: 30%;
+    height: 30%;
 }
