--- a/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/base/base.component.html
@@ -21,6 +21,9 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<app-features2></app-features2>
+
 <app-slider2></app-slider2>
 
 <app-all-categories></app-all-categories>
