--- a/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
                             <label class="btn btn-outline-primary" for="option1">User</label>
                         </div>
                         <div class="col-md">
-                            <input type="radio" class="btn-check" formControlName="roleId" name="roleId" id="option2" va
+                            <input type="radio" class="btn-check" formControlName="roleId" name="roleId" id="option2" value="2"
                                 autocomplete="off">
                             <label class="btn btn-outline-primary" for="option2">Mentor</label>
                         </div>
@@ -40,7 +40,7 @@
                 <p class="" error-message></p>
                 <div><input formControlName="userName" hidden name="userName" type="text" class="username"  /></div>
                 <div>Email:<input formControlName="email" name="email" type="text" class="email" /></div>
-                <div>Password:<input formControlName="password" name="password" type="text" class="password" /></div>
+                <div>Password:<input formControlName="password" name="password" type="password" class="password" /></div>
                 <!-- <div>Role:<input formControlName="roleId" name="roleId" type="text" class="roleId" /></div> -->
                 <div><input class="login-text" type="submit" value="Log In" /></div>
     
