--- a/Angular-Components/UpSkillUi/src/app/components/add-video/add-video.component.css
+++ b/Angular-Components/UpSkillUi/src/app/components/add-video/add-video.component.css
@@ -1,3 +1,7 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+
 .column{
 
     margin-top: 3rem;
@@ -12,3 +16,9 @@
     
 
 }
+
+label{
+    font-family: 'Amatic SC', cursive;
+    font-size: larger;
+}
+
