--- a/Angular-Components/UpSkillUi/src/app/components/add-video/add-video.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/add-video/add-video.component.html
@@ -1,8 +1,8 @@
-{{video|json}}
+<!-- {{video|json}} -->
 
 <!-- add validation here -->
 <!-- courseId should be dropdown of mentor's previous courses -->
-<div class="container" style="border:solid 1px">
+<div class="container col-md-5" style="border:solid 1px; border-radius: 2%;">
 <div class="column">
 <form #f1="ngForm" action="" class="form-group">
     <div class="form-group">
