--- a/Angular-Components/UpSkillUi/src/app/components/profile/profile.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="row">
+<div class="col-md-2"></div>
 
-
-<div class="col-md-10">
+<div class="col-md-8">
 <section style="background-color: #eee;">
     <div class="container py-5">
       <div class="row">
