i dont remember what i changed

--- a/Angular-Components/UpSkillUi/src/app/app.component.html
+++ b/Angular-Components/UpSkillUi/src/app/app.component.html
@@ -2,17 +2,20 @@
 <!-- <app-profile></app-profile> -->
 <!-- <app-footer></app-footer> -->
 <!-- <app-login></app-login> -->
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <!-- <app-footer></app-footer> -->
 <!-- <app-base></app-base> -->
 <!-- <app-all-categories></app-all-categories> -->
 <!-- <app-home></app-home> -->
 <!-- <app-slider2></app-slider2> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-course-page></app-course-page> -->
 
 <!-- <app-navbargoodlooking></app-navbargoodlooking> -->
+<!-- <app-home></app-home> -->
+<router-outlet></router-outlet>
 <!-- <app-mentor-home></app-mentor-home> -->
+<!-- <app-footer></app-footer> -->
 <!-- <app-sign-up></app-sign-up> -->
 
 
