--- a/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/course-page/course-page.component.html
@@ -6,6 +6,7 @@
         <div class="video">
             <iframe width="720" height="415" [attr.src]="present_video" id="video">
             </iframe>
+            <h2>{{coursetitle}}</h2>
         </div>
     </div>
     <div class="col-md-4">
