--- a/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/login/login.component.html
@@ -40,6 +40,12 @@
                 <p class="" error-message></p>
                 <div><input formControlName="userName" hidden name="userName" type="text" class="username"  /></div>
                 <div>Email:<input formControlName="email" name="email" type="text" class="email" /></div>
+                <div *ngIf="email.invalid && (email.dirty || email.touched)"
+    class="alert">
+
+  <div *ngIf="email.errors?.['required']">
+    Name is required.
+  </div></div>
                 <div>Password:<input formControlName="password" name="password" type="text" class="password" /></div>
                 <!-- <div>Role:<input formControlName="roleId" name="roleId" type="text" class="roleId" /></div> -->
                 <div><input class="login-text" type="submit" value="Log In" /></div>
