--- a/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/navbargoodlooking/navbargoodlooking.component.html
@@ -32,17 +32,17 @@
       
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">All Courses</a>
-          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="/all-courses">All Courses</a>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#">Enrolled Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Profile</a>
+            <a class="nav-link" href="/profile">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Login</a>
+            <a class="nav-link" href="/login">Login</a>
           </li>
         </ul>
       </div>
