--- a/Angular-Components/UpSkillUi/src/app/components/about-us/about-us.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/about-us/about-us.component.html
@@ -7,7 +7,7 @@
 				<img class="postcard__img" src="assets/images/user.jpeg" alt="Image Title" />
 			</a>
 			<div class="postcard__text">
-				<h1 class="postcard__title blue"><a href="#">Megan Fox</a></h1>
+				<h1 class="postcard__title blue"><a href="#">Dhruv Kanthaliya</a></h1>
 				<div class="postcard__subtitle small">
 					<time datetime="2020-05-25 12:00:00">
 						<i class="fas fa-calendar-alt mr-2"></i>Web-Developer
@@ -29,7 +29,7 @@
 		</article>
 		<article class="postcard dark red">
 			<a class="postcard__img_link" href="#">
-				<img class="postcard__img" src="https://picsum.photos/501/500" alt="Image Title" />	
+				<img class="postcard__img" src="assets/images/user2.jpeg" alt="Image Title" />	
 			</a>
 			<div class="postcard__text">
 				<h1 class="postcard__title red"><a href="#">Aman Srivastav</a></h1>
@@ -39,7 +39,7 @@
 					</time>
 				</div>
 				<div class="postcard__bar"></div>
-				<div class="postcard__preview-txt">Beautiful, sexy, glamourous, hot are just words to describe him, but he is so much more.</div>
+				<div class="postcard__preview-txt">Beautiful, sexy, glamourous, hot are not the words to describe him, but he is so much less .</div>
 				<ul class="postcard__tagbox">
 					<li class="tag__item"><i class="fas fa-tag mr-2"></i>Asp.Net</li>
 					<li class="tag__item"><i class="fas fa-clock mr-2"></i>Angular</li>
@@ -54,7 +54,7 @@
 		</article>
 		<article class="postcard dark green">
 			<a class="postcard__img_link" href="#">
-				<img class="postcard__img" src="https://picsum.photos/500/501" alt="Image Title" />
+				<img class="postcard__img" src="assets/images/user3.jpeg" alt="Image Title" />
 			</a>
 			<div class="postcard__text">
 				<h1 class="postcard__title green"><a href="#">Muhammed Faseel</a></h1>
@@ -82,7 +82,7 @@
 		</article>
 		<article class="postcard dark yellow">
 			<a class="postcard__img_link" href="#">
-				<img class="postcard__img" src="https://picsum.photos/501/501" alt="Image Title" />
+				<img class="postcard__img" src="assets/images/user4.jpeg" alt="Image Title" />
 			</a>
 			<div class="postcard__text">
 				<h1 class="postcard__title yellow"><a href="#">Asutosh Patnaik</a></h1>
@@ -92,7 +92,7 @@
 					</time>
 				</div>
 				<div class="postcard__bar"></div>
-				<div class="postcard__preview-txt">kozhi</div>
+				<div class="postcard__preview-txt"></div>
 				<ul class="postcard__tagbox">
 					<li class="tag__item"><i class="fas fa-tag mr-2"></i>Asp.Net</li>
 					<li class="tag__item"><i class="fas fa-clock mr-2"></i>Angular</li>
