--- a/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
+++ b/Angular-Components/UpSkillUi/src/app/components/slider2/slider2.component.html
@@ -17,8 +17,8 @@
         </button>
       </div>
       <div>
-        <button class="prev btnx button" appPrev>&lt;&lt;</button>
-        <button class="next btnx button" appNext>&gt;&gt;</button>
+        <button style="border-width: 0;" class="prev btnx button" appPrev><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+        <button style="border-width: 0;" class="next btnx button" appNext><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
